# liegroups

./: CMakeLists.txt  license.txt
include/: spline.hpp  spline_io.hpp
include/liegroups/: aff2.hpp  aff2_io.hpp  exp_coefs.hpp  exp_helpers.hpp  matrix.hpp  matrix_impl.hpp  scalar.hpp  se2.hpp  se2_io.hpp  se3.hpp  se3_io.hpp  sim2.hpp  sim2_io.hpp  sim3.hpp  sim3_io.hpp  sl3.hpp  sl3_io.hpp  so3.hpp  so3_io.hpp
src/: aff2.cpp  aff2_io.cpp  exp_coefs.cpp  matrix.cpp  se2.cpp  se2_io.cpp  se3.cpp  se3_io.cpp  sim2.cpp  sim2_io.cpp  sim3.cpp  sim3_io.cpp  sl3.cpp  sl3_io.cpp  so3.cpp  so3_io.cpp  spline.cpp  spline_io.cpp
test/: CMakeLists.txt  expm.cpp  extrinsics.cpp  main.cpp  moments.cpp  se3_gen.cpp  se3_moments.cpp  spline_test.cpp  test_helpers.hpp
